--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 LibIZY
 ======
 
+Copyright (C) 2013 - present by OpenGamma Inc. and the OpenGamma group of companies.
+Please see distribution for license.
+
 Linux/Apple build
 -----------------
 
